--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zero-server",
   "version": "1.0.0",
   "description": "Server application for pi zero experimentation",
-  "main": "node-server.js",
+  "main": "zero-server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
