add express typings

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "deltaryz",
   "license": "MIT",
   "dependencies": {
+    "@types/express": "^4.17.2",
     "express": "^4.17.1",
     "sqlite3": "^4.1.1"
   }
