--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.2",
+    "@types/sqlite3": "^3.1.6",
     "express": "^4.17.1",
     "sqlite3": "^4.1.1"
   }
